--- a/CreditLimit/CreditData/index.scss
+++ b/CreditLimit/CreditData/index.scss
@@ -69,13 +69,13 @@
             z-index: 2;
         }
 
-        .react-datepicker__input-container input {
+        .react-datepicker__input-container input:not(.mrc-ui-datepicker-input) {
             z-index: 10;
             position: relative;
             background-color: transparent;
         }
 
-        .react-datepicker__input-container input:disabled {
+        .react-datepicker__input-container input:disabled:not(.mrc-ui-datepicker-input) {
             z-index: 0 !important;
             color: #99a1ad !important;
             background-color: #f2f3f5 !important;
